Fix contrast for notes fields header

--- a/src/styles/h5p-cornell-main.scss
+++ b/src/styles/h5p-cornell-main.scss
@@ -9,6 +9,7 @@ $color-button-disabled: #e9e9e4;
 $background-color-button-disabled: #838383;
 
 $color-dark-text: #4c4452;
+$color-dark-base: #145cad;
 
 $size-content-max-width: 1058px;
 $size-container-max-width: 1920px;
